--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.15.4",
     "react-icons": "^4.2.0",
+    "react-redux": "^7.2.5",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -50,7 +52,8 @@
     "eslint": "^7.32.0",
     "husky": "^7.0.2",
     "lint-staged": "^11.1.2",
-    "prettier": "^2.4.1"
+    "prettier": "^2.4.1",
+    "redux-devtools-extension": "^2.13.9"
   },
   "lint-staged": {
     "*.js": "eslint --cache --fix",
